--- a/compan_one/index.html
+++ b/compan_one/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="css/slicknav.css">
 	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/slick-theme.css">
-	<link rel="stylesheet" href="css/animate.css">
+	<!--<link rel="stylesheet" href="css/animate.css">-->
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/media.css">
 </head>
