--- a/cargo_delivery/index.html
+++ b/cargo_delivery/index.html
@@ -10,7 +10,7 @@
 	<link rel="shortcut icon" href="img/logo.png" type="image/png">
 
 	<link rel="stylesheet" href="libs/css/normalize.css">
-	<!-- <link rel="stylesheet" href="libs/css/animate.css"> -->
+	<link rel="stylesheet" href="libs/css/animate.css">
 	<link rel="stylesheet" href="libs/css/slick.css">
 	<link rel="stylesheet" href="libs/css/slick-theme.css">
 	<link rel="stylesheet" href="libs/css/bootstrap-grid.min.css">
