--- a/master_locksmith/index.html
+++ b/master_locksmith/index.html
@@ -574,7 +574,7 @@
 	</div> -->
 
 	<link rel="stylesheet" href="css/slick.css">
-	<link rel="stylesheet" href="css/animate.css">
+	<!-- <link rel="stylesheet" href="css/animate.css"> -->
 	<link rel="stylesheet" href="css/style.css">
 
 	<link rel="stylesheet" href="css/slick-theme.css">
