--- a/chaga/index.html
+++ b/chaga/index.html
@@ -11,7 +11,7 @@
 
 	<link rel="stylesheet" href="libs/css/normalize.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:500,600,700,800&display=swap&subset=cyrillic" rel="stylesheet">
-	<!-- <link rel="stylesheet" href="libs/css/animate.css"> -->
+	<link rel="stylesheet" href="libs/css/animate.css">
 	<link rel="stylesheet" href="libs/css/slick.css">
 	<link rel="stylesheet" href="libs/css/slick-theme.css">
 	<link rel="stylesheet" href="css/main.css">
